- Changed blog loading image size. - Changed header footer color lighter shades of apricot. - Added support to denote image is selected for admin. - Added Modal view support Blog content images. - Instagram onHover animations added. -Changed Firebase project

--- a/src/app/admin-panel/admin-login/admin-login.component.html
+++ b/src/app/admin-panel/admin-login/admin-login.component.html
@@ -9,8 +9,8 @@
           <div class="card-body">
             <div [formGroup]="adminLoginForm">
               <div class="md-form">
-                  <input mdbInput formControlName="email" type="text" id="email" class="form-control" >
-                  <label for="email">User Name</label>
+                  <input mdbInput formControlName="adminemail" type="text" id="adminemail" class="form-control" >
+                  <label for="adminemail">User Name</label>
               </div>
               <div class="md-form">
                   <input mdbInput formControlName="password" type="password" id="password" class="form-control" >
