--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -39,8 +39,8 @@
                     <p>
                         <a href="https://www.instagram.com/flowerfairyofficial/?hl=en" target="_blank"><span class="fa fa-instagram fa-2x p-2"></span></a>
                         <a href="https://www.facebook.com/priyaharidaskotnis/"target="_blank"><span class="fa fa-facebook fa-2x p-2"></span></a>
-                        <a href="https://www.youtube.com/channel/UCpZjcl9EzcqVJ1CPu48QuBw" target="_blank"><span class="fa fa-twitter fa-2x p-2"></span></a>
-                        <a href="https://twitter.com/flowerfairy1991?lang=en" target="_blank"><span class="fa fa-youtube fa-2x p-2"></span></a>
+                        <a href="https://twitter.com/flowerfairy1991?lang=en" target="_blank"><span class="fa fa-twitter fa-2x p-2"></span></a>
+                        <a href="https://www.youtube.com/channel/UCpZjcl9EzcqVJ1CPu48QuBw" target="_blank"><span class="fa fa-youtube fa-2x p-2"></span></a>
                     </p>
                 </div>
             </div>
