--- a/src/app/blogs/blog-content/blog-content.component.html
+++ b/src/app/blogs/blog-content/blog-content.component.html
@@ -50,14 +50,23 @@
             <div class="post-content-body">
               <h2 class="font-weight-bold mb-3">{{post.subtitle}}</h2>
               <p>{{post.description}}</p>
-              <div class="col-md-15 mb-4">
-                  <img class="img-fluid card-body bg-dark pic1"  [src]="post.pic1">
-                  <img class="img-fluid card-body bg-dark pic2"  [src]="post.pic2">
-                  <img class="img-fluid card-body bg-dark pic3"  [src]="post.pic3">
+              <div class="row">
+                <div class="column" *ngFor="let pic of row1;let i=index">
+                  <img [src]="pic" (click)="picClicked(i,1)" style="width:100%">
+                </div>
+              </div>
+              <div class="row">
+                <div class="column" *ngFor="let pic of row2;let j=index">
+                  <img [src]="pic" (click)="picClicked(j,2)" style="width:100%">
+                </div>
               </div>    
             </div>
           </div>
         </div>
       </div>
   </section>
+  <div id="myModal" class="modal">
+    <span class="close" (click)="spanClicked()">&times;</span>
+    <img class="modal-content" id="img01">
+  </div>
 </ng-template>
