--- a/src/app/body/latest-post/latest-post.component.html
+++ b/src/app/body/latest-post/latest-post.component.html
@@ -30,7 +30,7 @@
             </ng-template>
             <ng-template #elseblock>
                 <div *ngFor="let post of latestPosts">
-                    <div class="row">
+                    <div class="row row-hover">
                         <div class="col-lg-5">
                             <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 waves-light" mdbWavesEffect>
                                 <img class="img-fluid" src={{post.coverPhoto}} alt="Sample image" (click)="navigateToBlogContent(post.$key)">
