-Added support to upload blog images to firebase storage. -Changed Generic Blog Header font weight.

--- a/src/app/blogs/generic-blog-list/generic-blog-list.html
+++ b/src/app/blogs/generic-blog-list/generic-blog-list.html
@@ -4,7 +4,7 @@
         <div class="col-md-12 col-lg-10">
           <div class="post-entry text-center">
             <span class="post-category text-white bg-success mb-3">{{ categoryName }}</span>
-            <h1 class="mb-4"><a href="#">{{ categoryName }} BLOGS</a></h1>
+            <h1 class="font-weight-bold mb-4"><a href="#">{{ categoryName }} BLOGS</a></h1>
           </div>
         </div>
       </div>
