--- a/src/app/admin-panel/adminblogedit/adminblogedit.component.html
+++ b/src/app/admin-panel/adminblogedit/adminblogedit.component.html
@@ -19,34 +19,34 @@
             <option value="food">Food</option>
         </select><br/><br/>
         
-        <label>Cover Photo *</label>
-        <button mdbBtn (click)="addPic(0)" [color]="coverPicButton" mdbWavesEffect>Select Cover Pic</button>
-        <br/><br/>       
-        
-        <label>Pic 1 *</label>
-        <button mdbBtn (click)="addPic(1)" [color]="pic1Button"  mdbWavesEffect>Select Pic 1</button>
-        <br/><br/> 
-
-        <label>Pic 2 *</label>
-        <button mdbBtn (click)="addPic(2)" [color]="pic2Button" mdbWavesEffect>Select Pic 2</button>
-        <br/><br/> 
-
-        <label>Pic 3 *</label>
-        <button mdbBtn (click)="addPic(3)" [color]="pic3Button"  mdbWavesEffect>Select Pic 3</button>
-        <br/><br/> 
-
-        <label>Pic 4 *</label>
-        <button mdbBtn (click)="addPic(4)" [color]="pic4Button"  mdbWavesEffect>Select Pic 4</button>
-        <br/><br/> 
-
-        <label>Pic 5 *</label>
-        <button mdbBtn (click)="addPic(5)" [color]="pic5Button" mdbWavesEffect>Select Pic 5</button>
-        <br/><br/> 
-
-        <label>Pic 6 *</label>
-        <button mdbBtn (click)="addPic(6)" [color]="pic6Button"  mdbWavesEffect>Select Pic 6</button>
-        <br/><br/>
-
+        <div class="md-form">
+            <p>Select Cover Pic *</p>
+            <input mdbInput type="file" id="coverPicFile" class="form-control" (change)="addPicToStorage($event,0)">
+        </div>
+        <div class="md-form">
+            <p>Select Pic 1 *</p>
+            <input mdbInput type="file" id="pic1" class="form-control" (change)="addPicToStorage($event,1)">
+        </div>
+        <div class="md-form">
+            <p>Select Pic 2 *</p>
+            <input mdbInput type="file" id="pic2" class="form-control" (change)="addPicToStorage($event,2)">
+        </div>
+        <div class="md-form">
+            <p>Select Pic 3 *</p>
+            <input mdbInput type="file" id="pic3" class="form-control" (change)="addPicToStorage($event,3)">
+        </div>
+        <div class="md-form">
+            <p>Select Pic 4 *</p>
+            <input mdbInput type="file" id="pic4" class="form-control" (change)="addPicToStorage($event,4)">
+        </div>
+        <div class="md-form">
+            <p>Select Pic 5 *</p>
+            <input mdbInput type="file" id="pic5" class="form-control" (change)="addPicToStorage($event,5)">
+        </div>
+        <div class="md-form">
+            <p>Select Pic 6 *</p>
+            <input mdbInput type="file" id="pic6" class="form-control" (change)="addPicToStorage($event,6)">
+        </div>
         <div class="md-form md-outline">
             <textarea type="text" id="description" formControlName="description" class="form-control md-textarea" rows="3" mdbInput></textarea>
             <label for="description">Blog Description *</label>
