-Initial support added for ssr firebase. -Changed header font -Few UI fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="site-wrap">
     <header class="site-navbar" role="banner" [ngStyle]="{'background-color': getHeaderFooterColor()}">
-        <a href="/" class="headerText">PRIYA HARIDAS KOTNIS</a>
+        <a href="/" class="headerText">Priya Haridas Kotnis</a>
         <app-menu></app-menu>
     </header>
     <div>
