--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -2,7 +2,14 @@
     <div class="row mb-5">
         <div class="col-md-4">
             <h3 class="font-weight-bold mb-3 text-black">About Me</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat reprehenderit magnam deleniti quasi saepe, consequatur atque sequi delectus dolore veritatis obcaecati quae, repellat eveniet omnis, voluptatem in. Soluta, eligendi, architecto.</p>
+            <p class="mb-4" style="text-align:justify">Fashion blogger/Content creator, Lifestyle influencer, Ex-Splitsvillan & COO at Dukes Den Resort & Kotnis Group. Partner at The British Brow Bar, Pune.28 years young.</p>
+            <p class="mb-4" style="text-align:justify">Priya Haridas Kotnis Lifestyle Influencer born in Mumbai city & brought up all over india thanks to her dad. Fluent in Hindi, English, Tamil, Malayalam, Bengali and Gujarati.
+                    2009 brought her to Pune, that's where she pursued her core passion. Her flare for fashion & style has always been constant since then. 
+                    She finished her Undergrad & Grad studies in Pune, Bachelor's Degree in Fashion Design and Post Graduate Diploma in Fashion Marketing & Style, respectively. 
+                    She is a Classical trained dancer in 'Bharatnatyam' 
+                    Over her short years on this planet, She has been blessed to get a chance to do what millions of girls wish to 
+                    'Mtv Splitsvilla 9'
+            </p>
         </div>
         <div class="col-md-3 ml-auto">
             <h3 class="font-weight-bold mb-3 text-black">Quick Menu</h3>
