--- a/src/app/body/latest-post/latest-post.component.html
+++ b/src/app/body/latest-post/latest-post.component.html
@@ -57,7 +57,13 @@
             <div class="bio-body">
                 <h2 class="font-weight-bold mb-3">Priya Haridas Kotnis</h2>
                 <span class="post-category text-white bg-danger mb-3">ABOUT</span>
-                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem facilis sunt repellendus excepturi beatae porro debitis voluptate nulla quo veniam fuga sit molestias minus.</p>
+                <p class="mb-4" style="text-align:justify">Fashion blogger/Content creator, Lifestyle influencer, Ex-Splitsvillan & COO at Dukes Den Resort & Kotnis Group. Partner at The British Brow Bar, Pune.28 years young.</p>
+                <p class="mb-4" style="text-align:justify">Priya Haridas Kotnis Lifestyle Influencer born in Mumbai city & brought up all over india thanks to her dad. Fluent in Hindi, English, Tamil, Malayalam, Bengali and Gujarati.
+                    2009 brought her to Pune, that's where she pursued her core passion. Her flare for fashion & style has always been constant since then. 
+                    She finished her Undergrad & Grad studies in Pune, Bachelor's Degree in Fashion Design and Post Graduate Diploma in Fashion Marketing & Style, respectively. 
+                    She is a Classical trained dancer in 'Bharatnatyam' 
+                    Over her short years on this planet, She has been blessed to get a chance to do what millions of girls wish to 
+                    'Mtv Splitsvilla 9'</p>
                 <p class="social">
                     <a href="https://www.instagram.com/flowerfairyofficial/?hl=en" target="_blank" class="p-2"><span class="fa fa-instagram fa-2x p-2"></span></a>
                     <a href="https://www.facebook.com/priyaharidaskotnis/" target="_blank" class="p-2"><span class="fa fa-facebook fa-2x p-2"></span></a>
