- Initial support added for header pics update by admin. - backend is complete. - need to update frontend.

--- a/src/app/admin-panel/adminbloglist/adminbloglist.component.html
+++ b/src/app/admin-panel/adminbloglist/adminbloglist.component.html
@@ -6,6 +6,9 @@
         <button mdbBtn color="primary" (click)="displayFamDetails()">Gang Details</button>
     </div>
     <div class="col-xs-12">
+        <button mdbBtn color="primary" (click)="uploadHeaderImages()">Update Slide Pics</button>
+    </div>
+    <div class="col-xs-12">
             <button mdbBtn color="warning" (click)="logout()">Logout</button>
     </div>
 </div>
