--- a/src/app/blogs/blog-content/blog-content.component.html
+++ b/src/app/blogs/blog-content/blog-content.component.html
@@ -33,7 +33,7 @@
           <div class="col-md-12 col-lg-10">
             <div class="post-entry text-center">
               <span class="post-category text-white bg-success mb-3">{{post.type}}</span>
-              <h1 class="mb-4"><a href="#">{{post.title}}</a></h1>
+              <h1 class="mb-4"><a>{{post.title}}</a></h1>
               <div class="post-meta align-items-center text-center">
                 <span>&nbsp;-&nbsp;{{ post.time | date: 'EEEE, MMMM d, y' }}</span>
               </div>
