--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -14,10 +14,10 @@
         <div class="col-md-3 ml-auto">
             <h3 class="font-weight-bold mb-3 text-black">Quick Menu</h3>
             <ul class="list-unstyled float-left mr-5">
-                <li><a (click)="onClick('blogs/fashion')">Fashion</a></li>
-                <li><a (click)="onClick('blogs/beauty')">Beauty</a></li>
-                <li><a (click)="onClick('blogs/food')">Food</a></li>
-                <li><a (click)="onClick('blogs/travel')">Travel</a></li>
+                <li><a [routerLink]="['blogs/fashion']">Fashion</a></li>
+                <li><a [routerLink]="['blogs/beauty']">Beauty</a></li>
+                <li><a [routerLink]="['blogs/food']">Food</a></li>
+                <li><a [routerLink]="['blogs/travel']">Travel</a></li>
             </ul>
         </div>
         <div class="col-md-4">
